krakend/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krakend-service
  namespace: krakend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8080
      protocol: TCP
  selector:
    app: krakend
