krakend/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krakend-ingress
  namespace: krakend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: krakend-service
                port:
                  number: 8080
            path: /krakend(/|$)(.*)
            pathType: Prefix
